Bug 402770 - Selection tool (disappear content)
Summary: Selection tool (disappear content)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-01 23:06 UTC by Vamdi
Modified: 2020-06-04 17:54 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
To show bug with selection tool (1.15 MB, video/avi)
2019-01-02 14:52 UTC, Vamdi
Details
selection-tool_empty_[krita-x64-4.2.7.1] (1.16 MB, video/quicktime)
2019-10-29 09:19 UTC, Vamdi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vamdi 2019-01-01 23:06:09 UTC
SUMMARY
Selection tool (disappear content when try move selection on same layer). It's happen when layer was lock\unlock (transparent).

STEPS TO REPRODUCE
1. make new (transparent) layer.
2. draw and lock them (transparent) to coloring.
3. after unlock it.
4. select area (on this layer).
5. try move (inside selection draw disappear).

OBSERVED RESULT
To solve it, copy "bug" layer.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 10
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2019-01-02 07:22:31 UTC
Sorry, I cannot reproduce that. Please provide a screen recording that shows exactly what you're doing or a test file that makes it easy to reproduce the issue.
Comment 2 Vamdi 2019-01-02 14:52:59 UTC
Created attachment 117240 [details]
To show bug with selection tool

To show bug with selection tool
Comment 3 Bug Janitor Service 2019-01-03 03:44:25 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 4 Halla Rempt 2019-01-03 09:12:23 UTC
Thank you, I have been able to reproduce the problem.
Comment 5 Halla Rempt 2019-01-03 10:36:39 UTC
I've checked older versions, and even 3.0 had this bug already.
Comment 6 Vamdi 2019-06-08 15:19:30 UTC
Hello.

This issue remained in 4.2.0 version.

Thanks for your work.
Comment 7 Vamdi 2019-06-28 07:02:51 UTC
Hello.

This issue still remained in 4.2.2 version.

Thanks for your work.
Comment 8 Halla Rempt 2019-06-28 09:17:03 UTC
Yes, unless this bug is marked as resolved/fixed, the issue will not have been fixed. Tiar is looking into it, though, since she has assigned the bug to herself. You will get mail when the bug status changes.
Comment 9 Vamdi 2019-07-22 07:25:09 UTC
Hello.

Issue still remain.

Krita: 4.2.3
Windows: 10

Thanks.
Comment 10 Vamdi 2019-10-29 09:19:44 UTC
Created attachment 123558 [details]
selection-tool_empty_[krita-x64-4.2.7.1]

selection contains disappear both way, with lock and unlock layer.
Comment 11 Tiar 2019-11-04 11:11:00 UTC
I need to unassign myself, I'll be working on other things now.
Comment 12 Vamdi 2019-11-22 08:33:39 UTC
Hello.

Issue still remain.

Krita: 4.2.8-beta1
Windows: 10

Thanks.
Comment 13 Vamdi 2020-03-09 20:05:01 UTC
Hello.

Issue still remain!

Krita: 4.2.9-beta1
Windows: 10

Thanks.
Comment 14 Tiar 2020-03-09 20:33:59 UTC
@Vamdi, please *do not* comment that way on open bugs. They are open, because they are not solved, and before they get solved by developers (and marked RESOLVED FIXED), they will remain and happen in every new version. You're not helping that way :( 

If you want to prioritize some bug over another, please come on IRC instead: https://kiwiirc.com/nextclient/irc.freenode.net/?nick=webuser%7C?#krita to talk to developers directly.
Comment 15 Dmitry Kazakov 2020-06-04 17:53:54 UTC
Git commit 8dbd14dea2f360521b1e25ad07c26c29b0c5d1d3 by Dmitry Kazakov.
Committed on 04/06/2020 at 17:53.
Pushed by dkazakov into branch 'krita/4.3'.

Fix move-selection action after using locked-alpha painting

The configuration of the indirect painting infrastructure was not reset
after doing the stroke, therefore move tool used incorrect settings.

M  +3    -0    libs/image/kis_indirect_painting_support.cpp
M  +2    -0    plugins/tools/basictools/strokes/move_selection_stroke_strategy.cpp

https://invent.kde.org/graphics/krita/commit/8dbd14dea2f360521b1e25ad07c26c29b0c5d1d3
Comment 16 Dmitry Kazakov 2020-06-04 17:54:14 UTC
Git commit 96157f51e8ede67153692454f4a9b6d2bb57547d by Dmitry Kazakov.
Committed on 04/06/2020 at 17:54.
Pushed by dkazakov into branch 'master'.

Fix move-selection action after using locked-alpha painting

The configuration of the indirect painting infrastructure was not reset
after doing the stroke, therefore move tool used incorrect settings.

M  +3    -0    libs/image/kis_indirect_painting_support.cpp
M  +2    -0    plugins/tools/basictools/strokes/move_selection_stroke_strategy.cpp

https://invent.kde.org/graphics/krita/commit/96157f51e8ede67153692454f4a9b6d2bb57547d