Fix move-selection action after using locked-alpha painting

The configuration of the indirect painting infrastructure was not reset
after doing the stroke, therefore move tool used incorrect settings.

BUG:402770